moved default width/height to #root, prevent margin overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,19 +17,16 @@
 
 @import "assets/css/global-vars";
 
-body {
+#root {
   min-width: 100svw;
   min-height: 100svh;
-}
-
-#root {
-  width: 100%;
-  height: 100%;
 
   margin: 0;
   padding: 0;
 
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 
   color-scheme: light dark;
   font-family: "Open Sans", sans-serif;
@@ -59,8 +56,8 @@ body {
 }
 
 #page-content {
-  min-height: calc(100% - 20rem);
   line-height: 1.618em;
+  overflow: hidden;
 
   > section:first-child {
     margin-top: 2rem;
